--- a/style.css
+++ b/style.css
@@ -17,17 +17,30 @@ body {
 }
 
 .Deliverables {
-    margin-left: 50px;
+    width: 100%;
+}
+
+.Deliverables-Links {
+    position: fixed;
+    top: 50%;
+}
+
+.Deliverables-Viewer {
+    margin-left: 20%;
+    
+    width: 80%;
 }
 
 ul li{
     margin-bottom: 10px;
 }
 
+h1 {
+    text-align: center;
+}
 
 .chicle-regular {
     font-family: "Chicle", serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
+}
