--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .Navigation {
     display: grid;
-    grid-template-columns: 85% auto;
+    grid-template-columns: 10% auto;
 
     height: 190px;
 
@@ -21,18 +21,22 @@ body {
 }
 
 .Deliverables-Links {
-    position: fixed;
     top: 50%;
 }
 
 .Deliverables-Viewer {
-    margin-left: 20%;
+    margin: 0 2% 0 2%;
     
-    width: 80%;
+    width: 96%;
 }
 
-ul li{
-    margin-bottom: 10px;
+.Deliverables-Links ul {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto
+}
+
+.Deliverables-Links li{
+    list-style-type: none;
 }
 
 h1 {
@@ -43,4 +47,14 @@ h1 {
     font-family: "Chicle", serif;
     font-weight: 400;
     font-style: normal;
+}
+
+table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    background-color: #e3d5ca;
 }
